# v2-of-fingerprint-based-attendance-system

./: .gitignore  .gitmodules  CMakeLists.txt  display calibration data.txt  littlefs_partition_table.csv
Touch_calibrate/: Touch_calibrate.ino
flash_data/: MEC2_FD.jsonl  Mec2-FS.txt  Mec2_FD.jsonl  Mec3-LH.txt  Mec3_LH.jsonl  Mec4_RH.jsonl
main/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
